[package]
name = "ggpo-rs"
version = "0.1.0"
authors = ["assemblaj <assemblaj@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
bindgen = "0.42.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "minwindef"] }
